--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">One</a></li>
+                        <li class="active"><a href="jQuery.html">JQuery Practice</a></li>
                         <li><a href="#">Two</a></li>
                         <li><a href="#">Three</a></li>
                     </ul>
@@ -46,7 +46,7 @@
                 <p class="lead">Manipulating the DOM with Javascript.</p>
             </section>
         </article>
-    </div>
+    </div>    
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 
