--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="jQuery.html">JQuery Practice</a></li>
-                        <li><a href="#">Two</a></li>
+                        <li><a href="jQuery.html">JQuery Practice</a></li>
+                        <li><a href="table.html">JQuery Script</a></li>
                         <li><a href="#">Three</a></li>
                     </ul>
                 </div>
