change to index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
         <article id="home-page">
             <section class="jumbotron">
-                <h1>The DOM</h1>
+                <h1>The DOM and Using JQuery</h1>
                 <p>The good, the bad and the ugly.</p>
             </section>
             <section class='content'>
