--- a/table.html
+++ b/table.html
@@ -49,7 +49,7 @@
       <td>Veg</td>
     </tr>
   </table>
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-  <script src="js/myscript.js"></script>
+  <script src="js/jquery-3.6.3.js"></script> <!--Jquery first-->
+  <script src="js/myscript.js"></script> <!--My script second-->
 </body>
 </html>
