--- a/table.html
+++ b/table.html
@@ -6,6 +6,15 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
   <style>
+    .newStyle{
+        font-size: 4rem;
+        color: red;
+        text-decoration: underline dashed;
+    }
+    .alternate-rows {
+        background-color: #dbb2e4;
+    }
+
     td, th {
       width: 5rem;
       height: 2rem;
