--- a/jQuery.html
+++ b/jQuery.html
@@ -73,9 +73,9 @@
 		</div>
 	</div>
     
-    <script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript" src="statement.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="script-events.js"></script>
 </body>
 
 </html>
