--- a/jQuery.html
+++ b/jQuery.html
@@ -32,28 +32,28 @@
 			<div class="card_bottom">
 				<h2 class="card_head">HTML</h2>
 				<p class="card_para">Once you join a Code Institute Bootcamp you will be taken on an accelerated contextualised learning path across 3 streams. Nothing is learned in isolation.We contextualise the content so that the knowledge and skills gained in each learning unit feeds into, and is expanded upon, within the next unit.The outputs of each stream will be a project. </p>
-				<button  class="bottom_button btn1">Hide</button>
+				<button  class="bottom_button btn1">hide(fade)</button>
 			</div>
 		</div>
 		<div class="card stream3">
 			<img class="card_image" src="img/1.png" alt="coding icon">	
 			<h2 class="card_head">MySql</h2>
 			<p class="card_para">If you have questions about your career in coding or simply want to meet the Code Institute team, then come along to our next Careers Open Evening in Dublin</p>
-			<button class="bottom_button btn2">Toggle</button>
+			<button class="bottom_button btn2">toggle</button>
 		</div>
 		
 		<div class="card stream2">
 			<img class="card_image" src="img/2.png" alt="coding icon">
 			<h2 class="card_head">Python</h2>
 			<p class="card_para">If you have questions about your career in coding or simply want to meet the Code Institute team, then come along to our next Careers Open Evening in Dublin</p>
-			<button class="bottom_button btn3">Toggle (slide param)</button>
+			<button class="bottom_button btn3">slideToggle</button>
 		</div>
 		<div class="card stream1">
 			<img class="card_image" src="img/3.png" alt="coding icon">
 			<div class="card_bottom">
 				<h2 class="card_head">jQuery</h2>
 				<p class="card_para">Once you join a Code Institute Bootcamp you will be taken on an accelerated contextualised learning path across 3 streams. Nothing is learned in isolation.We contextualise the content so that the knowledge and skills gained in each learning unit feeds into, and is expanded upon, within the next unit.The outputs of each stream will be a project. </p>
-				<a href="" class="bottom_button">Button</a>
+				<button class="bottom_button btn4">fadeTo(speed, opacity)</button>
 			</div>
 		</div>
 		<div class="card stream3">
