--- a/jQuery.html
+++ b/jQuery.html
@@ -14,6 +14,9 @@
         .container {
             margin-top: 20px;
         }
+		.redBox{
+			border: 2px solid red;
+		}
     </style>
 </head>
 
@@ -60,7 +63,7 @@
 			<img class="card_image" src="img/4.png" alt="coding icon">
 			<h2 class="card_head">Django</h2>
 			<p class="card_para">The syllabus has been developed to help you transform your career. The summarised syllabus, below, provides you with a snapshop of what skills you will come away with. Feel free to contact us for more detail on what you will learn.</p>
-			<button class="bottom_button btn5">Chaining</button>
+			<button class="bottom_button btn5">Chaining (fadeTo with fadeTo)</button>
 		</div>
 		<div class="card stream1">
 			<img class="card_image" src="img/1.png" alt="coding icon">
