the importance of this

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="jQuery.html">JQuery Practice</a></li>
                         <li><a href="table.html">JQuery Script</a></li>
-                        <li><a href="#">Three</a></li>
+                        <li><a href="usingThis.html">UsingThis</a></li>
                     </ul>
                 </div>
             </div>
