--- a/usingThis.html
+++ b/usingThis.html
@@ -23,9 +23,29 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti debitis voluptate rem natus eos ipsa ea quia dicta placeat, odit illo earum doloribus facilis quis? Delectus minus rem est sed.</p>
             <button class="make-red btn-text">I am a button</button>
         </div>
+    </div>
 
-
-
+    <div id="container2">
+		<div class="box one">
+		</div>
+		<div class="box three">
+		</div>
+		<div class="box one">
+		</div>
+		
+		<div class="box two">
+		</div>
+		<div class="box one">
+		</div>
+		<div class="box two">
+		</div>
+		
+		<div class="box three">
+		</div>
+		<div class="box three">
+		</div>
+		<div class="box two">
+		</div>
     </div>
 </body>
 </html>
